# viet-ime

./: .gitignore  CLAUDE.md  VietIME-dev.slnf  VietIME.sln
.claude/: settings.local.json
.claude/commands/: bmad-bash-windows.md
.factory/: AGENTS.md
.factory/droids/: bmad-master.md  bmm-analyst.md  bmm-architect.md  bmm-dev.md  bmm-pm.md  bmm-qa.md  bmm-quick-flow-solo-dev.md  bmm-sm.md  bmm-tech-writer.md  bmm-ux-designer.md
.github/workflows/: build-all-platforms.yml  build-and-sign.yml
_bmad-output/implementation-artifacts/: 1-1-core-telex-input-processing.md  1-2-tone-mark-placement.md  sprint-status.yaml
_bmad-output/planning-artifacts/: product-brief-viet-ime-2026-02-12.md  ux-design-directions.html
_bmad-output/project_knowledge/: architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  technology-stack.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
core/: Cargo.toml
core/core/: Cargo.toml
core/core/src/: lib.rs
core/core/src/engines/: mod.rs  telex.rs
core/core/src/models/: mod.rs  vietnamese.rs
core/core/tests/: telex_tests.rs
core/core/tests/engines/: telex_tests.rs
docs/: CHANGELOG-MAC-FIXES.md  CNAME  index.html
scripts/: build-all.sh  build-linux.sh  build-mac.sh  install.ps1  install.sh
src/VietIME.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  VietIME.App.csproj
src/VietIME.Hook/: KeyboardHook.cs  NativeMethods.cs
tools/: GenerateIcon.csx
(+56 files in other folders)
