[workspace]
resolver = "2"
members = [
    "core",
    # Future: platform layers
    # "platform/windows",
    # "platform/macos",
    # "platform/linux",
]

[workspace.dependencies]
# Shared dependencies for all workspace members

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
